# energirobotter-ros-workspace

./: .gitignore  README.md  requirements.txt  requirements_jetson.txt
behaviour_manager/: CMakeLists.txt  README.md  package.xml
behaviour_manager/include/behaviour_manager/: lifecycle_service_client.hpp  service_client.hpp
behaviour_manager/launch/: lifecycle_test.launch.py
behaviour_manager/nodes/: behaviour_manager.cpp  lifecycle_talker.cpp
behaviour_manager/src/: lifecycle_service_client.cpp
control_packages/animation_player/: package.xml
control_packages/animation_player/animation_player/: animation_player_node.py
control_packages/servo_control/: package.xml  setup.py
control_packages/servo_control/examples/: i2c_multiple_servo_example.py  serial_single_servo_example.py
debug_plotter/: package.xml  setup.cfg  setup.py
debug_plotter/debug_plotter/: joint_state_plotter.py  pose_plotter.py
elrik_bringup/: CMakeLists.txt  README.md  package.xml
elrik_bringup/config/: servo_head_params.yaml
elrik_bringup/config/rviz/: teleoperation.rviz
elrik_bringup/config/servos/: servo_arm_left_params.json  servo_arm_params.yaml  servo_arm_right_params.json  servo_arm_right_params_test.json  servo_hand_left_params.json  servo_hand_params.yaml  servo_hand_right_params.json  servo_hand_right_params_test.json  servo_head_params.json  servo_head_params.yaml  servo_params.yaml  servo_right_elbow_test.json
elrik_bringup/config/zed_camera/: optimised.yaml
elrik_bringup/launch/: animation.launch.py  arm.launch.py  face_detection_server.launch.py  face_following.launch.py  hand.launch.py  ik_test.launch.py  robot.launch.py  teleoperation.launch.py  vision.launch.py
elrik_bringup/launch/robot/: animation.launch.py  arm.launch_old.py  camera.launch.py  face_following.launch.py  network_bridge.launch.py  teleoperation_zeromq.launch.py
elrik_bringup/launch/server/: ik_control.launch.py  slider_control.launch.py  teleoperation.launch.py  teleoperation_vuer.launch.py
elrik_description/: CMakeLists.txt  README.md  package.xml
elrik_description/meshes/stl/: camera.stl  head_pitch.stl  head_roll.stl  head_yaw.stl  left_forearm.stl  left_hand.stl  left_wrist.stl  left_wrist_x.stl  right_forearm.stl  right_hand.stl  right_wrist.stl  right_wrist_x.stl
elrik_description/rviz/: elrik_display.rviz
elrik_description/servo_configs/: servo_arm_left_params_no_wrist_roll.json  servo_arm_right_params_no_wrist_roll.json  servo_hand_left_params.json  servo_hand_right_params.json
elrik_description/urdf/: elrik.urdf  elrik.urdf.xacro  elrik_no_wrist_roll.urdf  phobos_generated.urdf  phobos_generated_dae.urdf  phobos_generated_no_wrist_roll.urdf
energirobotter_bringup/: CMakeLists.txt  README.md  package.xml
energirobotter_bringup/animations/: recording.csv
energirobotter_bringup/config/rviz/: teleoperation.rviz
energirobotter_bringup/config/servos/: servo_arm_left_nowrist_params.json  servo_arm_left_params.json  servo_arm_params.yaml  servo_arm_right_nowrist_params.json  servo_arm_right_params.json  servo_hand_left_params.json  servo_head_params.json  servo_test.json
energirobotter_bringup/launch/robot/: animation.launch.py  arm.launch.py  arm.launch_old.py  camera.launch.py  face_following.launch.py  hand.launch.py  network_bridge.launch.py  object_detection.launch.py  servos.launch.py  teleoperation_vuer.launch.py  teleoperation_zeromq.launch.py
energirobotter_bringup/launch/server/: face_detection_server.launch.py  ik_control.launch.py  slider_control.launch.py  teleoperation.launch.py  teleoperation_vuer.launch.py
energirobotter_interfaces/: CMakeLists.txt  package.xml
energirobotter_interfaces/msg/: ServoCommand.msg
energirobotter_interfaces/srv/: ActivateNode.srv
face_detection/: README.md  package.xml  requirements.txt  setup.py
face_detection/face_detection/: face_detection_node.py
face_following/: README.md  package.xml  setup.cfg  setup.py
face_following/arduino_sketches/single_servo_serial/: single_servo_serial.ino
face_following/face_following/: face_following_node.py  servo_control.py
face_recognition/: README.md  package.xml  setup.py
face_recognition/face_recognition/: face_recognition_node.py
mock_camera/: package.xml  requirements.txt  setup.py
mock_camera/mock_camera/: mock_camera.py  mock_camera_node.py  photo_pub_node.py  webcam_pub_node.py
network_bridge/: package.xml  setup.py
network_bridge/network_bridge/: receive_tracking_node.py  send_camera_node.py
pkgs_control/animation_player/: setup.cfg  setup.py
pkgs_control/elrik_kdl_kinematics/: README.md  package.xml  setup.cfg  setup.py
pkgs_control/ik_manager/: package.xml  requirements.txt  setup.cfg  setup.py
pkgs_control/servo_control/: README.md  setup.py
pkgs_teleoperation/network_bridge/: README.md
pkgs_teleoperation/teleoperation/: README.md  package.xml  requirements.txt  setup.py
pkgs_teleoperation/webrtc_server_camera/: README.md  package.xml  setup.cfg  setup.py
pkgs_vision/: README.md
pkgs_vision/object_detection/: README.md  package.xml  setup.py
servo_control/: README.md  package.xml  servo_control_example.ipynb  setup.py
servo_control/examples/: i2c_multiple_servo_example.py  serial_single_servo_example.py
servo_control/servo_control/: servo_coms.py  servo_control.py  servo_control_node.py
vision/face_detection/: README.md  package.xml
vision_bringup/: CMakeLists.txt  package.xml
vision_bringup/config/: servo_hand_params.yaml  servo_params.yaml
vision_bringup/launch/: hand.launch.py  robot.launch.py  vision.launch.py
vision_packages/: README.md
vision_packages/face_following/: package.xml
vision_packages/mock_camera/: README.md  setup.py
wattson_description/: CMakeLists.txt  README.md  package.xml
wattson_description/rviz/: wattson_display.rviz
wattson_description/servo_configs/: servo_arm_left_params.json  servo_arm_right_params.json  servo_hand_left_params.json  servo_hand_right_params.json
wattson_description/urdf/: phobos_generated.urdf  wattson.urdf
wattson_description/utils/: fetch_phobos_urdf.py
(+96 files in other folders)
