<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>elrik_description</name>
  <version>0.0.0</version>
  <description>3D models of the rx1 robot, Elrik is based on, for simulation and visualization.</description>
  <maintainer email="xnlth@energinet.dk">Nicoline L. Thomsen</maintainer>
  <license>Energinet</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>urdf_launch</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

